<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/grid"
    android:padding="4dp"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/weather_image_favorite"
        android:layout_margin="16dp"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/city_name_favorite"
        android:layout_width="164dp"
        android:layout_height="32dp"
        android:text="@string/city_name"
        android:textSize="18sp"
        android:textAlignment="textStart"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/weather_image_favorite"
        app:layout_constraintStart_toEndOf="@id/weather_image_favorite"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/description_favorite"
        android:layout_width="164dp"
        android:layout_height="32dp"
        android:textSize="16sp"
        android:text="@string/description"
        android:textAlignment="textStart"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/weather_image_favorite"
        app:layout_constraintStart_toEndOf="@id/weather_image_favorite"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/city_temperature_favorite"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/temperature_text_size"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/city_name_favorite"
        app:layout_constraintBottom_toBottomOf="@+id/weather_image_favorite"
        app:layout_constraintStart_toEndOf="@id/description_favorite"
        android:layout_marginStart="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/weather_image_favorite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/maximum_temperature_text"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_width="0dp"
            android:paddingStart="8dp"
            android:text="@string/maximum_temperature"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:padding="4dp"/>

        <TextView
            android:id="@+id/minimum_temperature_value_favorite"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="center"
            android:paddingStart="8dp"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:padding="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/minimum_temperature_text"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="center"
            android:paddingStart="8dp"
            android:text="@string/minimum_temperature_text"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:padding="4dp"/>

        <TextView
            android:id="@+id/maximum_temperature_value_favorite"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="center"
            android:paddingStart="8dp"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:padding="4dp"/>
    </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>