<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:textAlignment="textStart">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@+id/city_name_details"
        app:layout_constraintBottom_toBottomOf="@+id/city_name_details" />

    <TextView
        android:id="@+id/city_name_details"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        tools:layout_editor_absoluteX="8dp" />

    <ImageView
        android:id="@+id/weather_image_detail"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_name_details" />

    <TextView
        android:id="@+id/actual_temp_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/weather_image_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/weather_image_detail"
        app:layout_constraintTop_toTopOf="@id/weather_image_detail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/weather_image_detail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/maximum_temperature_text"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_width="0dp"
                android:paddingStart="8dp"
                android:text="@string/maximum_temperature"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/minimum_temperature_value"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:gravity="center"
                android:paddingStart="8dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:padding="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/minimum_temperature_text"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:gravity="center"
                android:paddingStart="8dp"
                android:text="@string/minimum_temperature_text"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/maximum_temperature_value"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:gravity="center"
                android:paddingStart="8dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:padding="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/feels_like_temperature_text"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:gravity="center"
                android:paddingStart="8dp"
                android:text="@string/feels_like_temperature_text"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/feels_like_value"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:gravity="center"
                android:paddingStart="8dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:padding="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wind_speed_text"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:gravity="center"
                android:paddingStart="8dp"
                android:text="@string/wind_speed_text"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/wind_speed_value"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:gravity="center"
                android:paddingStart="8dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:padding="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/humidity_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="8dp"
                android:text="@string/humidity_text"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/humidity_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="8dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:padding="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sunrise_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="8dp"
                android:text="@string/sunrise_text"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/sunrise_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="8dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:padding="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sunset_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="8dp"
                android:text="@string/sunset_text"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/sunset_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="8dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:padding="4dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>